# image_detector

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  datasets.json  download_file.py  main.py  pyproject.toml  setup.py  ui解决问题.md
.trae/documents/: plan_pneumonia_detection.md
src/: cache.rs  dataset.rs  image.rs  lib.rs  processor.rs
src-py/: config.py  dataset.py  download_database.py  evaluate.py  gui.py  image_process.py  inference.py  logger_config.py  main.py  metrics.py  model.py  model_utils.py  system.py  threshold_tuner.py  train.py
tests/: conftest.py  test_config.py  test_dataset.py  test_image_process.py  test_metrics.py  test_model.py  test_system.py  test_threshold_tuner.py
