[project]
name = "image-detector"
version = "0.1.0"
description = "基于胸部X光的肺炎检测系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.4",
    "pyside6>=6.8.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]
