[project]
name = "image-detector"
version = "0.1.0"
description = "基于胸部X光的肺炎检测系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "loguru>=0.7.0",
    "matplotlib>=3.11.0",
    "maturin>=1.14.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.4",
    "pyside6>=6.8.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]


[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
